--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ button {
    justify-content: center;
    align-items: center;
    color: #f9faf8;
+   min-width: 200px;
 }
 
 .section-2 {
@@ -174,6 +175,7 @@ button {
    font-weight: 300;
    color: #1f2937;
    margin: 0;
+   min-width: 500px;
 }
 
 .section-3-author p {
@@ -183,6 +185,58 @@ button {
    margin: 0;
 }
 
+.section-4 {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   height: 500px;
+}
+
+.section-4-container {
+   display: flex;
+   justify-content: space-evenly;
+   align-items: center;
+   background-color: #3882f6;
+   border-radius: 8px;
+   padding: 50px 100px;
+   gap: 100px;
+}
+
+.section-4-left h1 {
+   font-size: 24px;
+   font-weight: 700;
+   color: #f9faf8;
+   margin: 0;
+}
+
+.section-4-left p {
+   font-size: 18px;
+   font-weight: 400;
+   color: #f9faf8;
+   margin: 0;
+}
+
+.section-4-right button {
+   background-color: #3882f6;
+   color: #f9faf8;
+   border: none;
+   border-radius: 8px;
+   border: 2px solid #f9faf8;
+   padding: 8px 16px;
+}
+
 .footer {
    margin-top: auto;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   background-color: #1f2937;
+   padding: 30px 0px;
+}
+
+.footer p {
+   font-size: 18px;
+   font-weight: 400;
+   color: #f9faf8;
+   margin: 0;
 }
